<resources>
    <string name="app_name">CourtCounter</string>
    <string name="cowboys">Dallas Cowboys</string>
    <string name="ravens">Baltimore Ravens</string>
    <string name="score">Score: 0</string>
    <string name="td">Touchdown</string>
    <string name="extraPoint">TD Extra Point</string>
    <string name="conversion">Conversion</string>
    <string name="fg">Field Goal</string>
    <string name="safety">Safety</string>
    <string name="reset">Reset</string>
</resources>
