<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation ="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/cowboys_2">
    <TextView
        android:id="@+id/cowboys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cowboys"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textAllCaps="true"
        android:textColor="@color/whiteSmoke"
        android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/dc_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:layout_gravity="center"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"
                android:textColor="@color/whiteSmoke"
                android:layout_marginBottom="16dp"
                android:textAllCaps="true"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/td"
                android:onClick="touchDownForCowboys"
                android:layout_margin="4dp"
                android:background="@drawable/button_custom"
                style="?borderlessButtonStyle"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extraPoint"
                style="?borderlessButtonStyle"
                android:layout_margin="4dp"
                android:onClick="extraPointForCowboys"
                android:background="@drawable/button_custom"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fg"
                style="?borderlessButtonStyle"
                android:layout_margin="4dp"
                android:onClick="fieldGoalForCowboys"
                android:background="@drawable/button_custom"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conversion"
                style="?borderlessButtonStyle"
                android:layout_margin="4dp"
                android:onClick="conversionForCowboys"
                android:background="@drawable/button_custom"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safety"
                android:onClick="safetyForCowboys"
                style="?borderlessButtonStyle"
                android:layout_margin="4dp"
                android:background="@drawable/button_custom"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/ravens_2">

            <TextView
                android:id="@+id/ravens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ravens"
                android:textColor="@color/whiteSmoke"
                android:textColorHighlight="@color/darkGoldenRod"
                android:gravity="center_horizontal"
                android:textAllCaps="true"
                android:layout_marginTop="8dp"
                android:fontFamily="monospace"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/br_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textColor="@color/whiteSmoke"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"
                android:textAllCaps="true"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/td"
                android:onClick="touchDownForRavens"
                android:layout_margin="4dp"
                android:background="@drawable/custom_button"
                style="?borderlessButtonStyle"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extraPoint"
                style="?borderlessButtonStyle"
                android:layout_margin="4dp"
                android:onClick="extraPointForRavens"
                android:background="@drawable/custom_button"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fg"
                style="?borderlessButtonStyle"
                android:onClick="fieldGoalForRavens"
                android:layout_margin="4dp"
                android:background="@drawable/custom_button"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/conversion"
                style="?borderlessButtonStyle"
                android:layout_margin="4dp"
                android:onClick="conversionForRavens"
                android:background="@drawable/custom_button"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/safety"
                android:onClick="safetyForRavens"
                style="?borderlessButtonStyle"
                android:layout_margin="4dp"
                android:background="@drawable/custom_button"
                />

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/reset_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="resetScore"
        android:layout_alignParentBottom="true"
        style="?borderlessButtonStyle"
        android:background="@drawable/reset_button"
        android:text="@string/reset"/>


</RelativeLayout>

